@@ -16,22 +16,31 @@
         CheckDependencies
 
         mkdir -p "${SYSROOT}/usr/share/cmake"
-        cat > "${SYSROOT}/usr/share/cmake/${SYSTEM}.config.cmake" << EOF
+        for GCC_CURRENT_VER in ${GCC_VER} ${GCC_EXTRA_VER}
+        do
+            SetBuildFlags "${GCC_CURRENT_VER}"
+            cat > "${SYSROOT}/usr/share/cmake/${SYSTEM}.gcc-${GCC_CURRENT_VER}.conf.cmake" << EOF
 set(CMAKE_SYSTEM_NAME Linux)
 set(BUILD_SHARED_LIBS OFF)
 set(LIBTYPE STATIC)
 set(CMAKE_BUILD_TYPE Release)
-set(CMAKE_FIND_ROOT_PATH ${SYSROOT})
+set(CMAKE_PREFIX_PATH "${SYSROOT}")
+set(CMAKE_FIND_ROOT_PATH "${SYSROOT}")
 set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
 set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
 set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
-set(CMAKE_C_COMPILER ${PREFIX}/bin/${TARGET}-gcc)
-set(CMAKE_CXX_COMPILER ${PREFIX}/bin/${TARGET}-g++)
-set(CMAKE_INSTALL_PREFIX ${SYSROOT}/usr CACHE PATH "Installation Prefix")
+set(CMAKE_C_COMPILER "${PREFIX}/bin/${TARGET}-gcc-${GCC_CURRENT_VER}")
+set(CMAKE_CXX_COMPILER "${PREFIX}/bin/${TARGET}-g++-${GCC_CURRENT_VER}")
+set(CMAKE_C_FLAGS "${CFLAGS}" CACHE STRING "" FORCE)
+set(CMAKE_CXX_FLAGS "${CXXFLAGS}" CACHE STRING "" FORCE)
+set(CMAKE_SHARED_LINKER_FLAGS "${LDFLAGS}" CACHE STRING "" FORCE)
+set(CMAKE_EXE_LINKER_FLAGS "${LDFLAGS}" CACHE STRING "" FORCE)
+set(CMAKE_INSTALL_PREFIX "${SYSROOT}/usr" CACHE PATH "Installation Prefix")
 set(CMAKE_BUILD_TYPE Release CACHE STRING "Debug|Release|RelWithDebInfo|MinSizeRel")
 set(CMAKE_CROSS_COMPILING ON) # Workaround for http://www.cmake.org/Bug/view.php?id=14075
 set(PKG_CONFIG_EXECUTABLE ${PREFIX}/bin/${TARGET}-pkg-config)
 EOF
+        done
 
         date -R > "${INST_DIR}/${PKG}"
         echo "[config]   ${CONFIG}"
