@@ -18,6 +18,8 @@
 * Update in all static configs:
   - LIBPNG_VER from 1.2.53 to 1.2.56
 * Update SetBuildFlags() for better support of gcc-extra.
+* Provide different cmake toolchain files for different GCC versions:
+  ${SYSROOT}/usr/share/cmake/${SYSTEM}.gcc-${GCC_CURRENT_VER}.conf.cmake
 
 --- v1.2 (2015-07-11) ---
 * Rewrite IsVer1GreaterOrEqualToVer2() function without using of dpkg
